kustomize/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: goapi
  name: goapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goapi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: goapi
    spec:
      containers:
      - image: wgleich/goapi:latest
        name: goapi
        resources: {}
status: {}
