kustomize/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: resume
  name: resume
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: resume
status:
  loadBalancer: {}
